some styles and action text added

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <p class="save">Save</p>
       </div>
     </div>
+    <div class="action-text hidden">delete Done.</div>
     <div class="edit-popup hidden">
       <textarea
         class="edit-input"
@@ -43,7 +44,7 @@
         <p class="edit">Edit</p>
       </div>
     </div>
-    <div class="edit-popup hidden"></div>
+
     <section class="contents-container">
       <!-- <div class="each-container">
         <div class="inner-container">
