--- a/index.html
+++ b/index.html
@@ -22,11 +22,7 @@
       <p>Click " + " icon to note here.....</p>
     </div>
     <div class="input-popup hidden">
-      <textarea
-        class="text-input"
-        onfocus=""
-        placeholder="Type here...."
-      ></textarea>
+      <textarea class="text-input" placeholder="Type here...."></textarea>
       <div class="popup-actions">
         <p class="cancel">Cancel</p>
         <p class="save">Save</p>
@@ -34,11 +30,7 @@
     </div>
     <div class="action-text hidden">delete Done.</div>
     <div class="edit-popup hidden">
-      <textarea
-        class="edit-input"
-        onfocus=""
-        placeholder="Type here...."
-      ></textarea>
+      <textarea class="edit-input" placeholder="Type here...."></textarea>
       <div class="popup-actions">
         <p class="cancel">Cancel</p>
         <p class="edit">Edit</p>
